2016-08-04

        * Version 1.2.0 released
        =========================

        Fix loss of application name and version (#1835)
        Add methods for logging in applications (#1828)
        Fix removal of Python wrappers after make clean (#1826)
        Add GModelSpectralExpInvPlaw class (#1800)
        Add GModelSpectralPlawEnergyFlux class (#1790)
        Rename GModelSpectralPlaw2 to GModelSpectralPlawPhotonFlux (#1790)


2016-07-24

        * Version 1.1.0 released
        =========================

        Check on model parameters in spectral registry (#1824)
        Rename spectral model components (#1821)
        Fix exception handling SWIG interface for Python 3
        Write same XML element names than those that were read (#1820)
        Rename spatial model components (#1818)
        Fix consistency problem in GCTABackground3D (#1815)
        Models accessing file now support relative file names (#1808)
        Add GXmlElement and GXmlDocument filename() methods (#1808)
        Move node parent from GXmlElement to GXmlNode class (#1808)
        Fix Makefile for example executables (#1806)
        Include examples in unit tests (#1803)
        Handle additional columns in GArf class
        GCTAAeff2D no longer extrapolates beyond response table (#1784)
        Add GWcsSIN projection class (#1798)
        Add weights to CTA event cube and event bin (#1789)
        Remove GCTACubeExposure, GCTACubePsf and GCTACubeBackground elogmeans() methods
        GCTACubeExposure, GCTACubePsf and GCTACubeBackground use energy values (#1788)
        GSkyMap::save() now overwrites files (#1787)
        Add GCTAPsfTable class (#1786)
        Use std::vector for naxes argument in GFitsImage (#1779)
        GCTACubePsf and GCTACubeEdisp now save 4D images
        Change interpolation scheme in GCTABackground3D
        Add GCsv::append() method (#1773)
        Add GTestSuite::test_value() string method (#1772)