@@ -163,7 +163,7 @@ public:
     void                    save(const GFilename& filename,
                                  const bool&      clobber = false) const;
     void                    read(const GFitsHDU& hdu);
-    void                    write(GFits& file,
+    GFitsHDU*               write(GFits& file,
                                   const std::string& extname = "") const;
     void                    publish(const std::string& name = "") const;
     std::string             print(const GChatter& chatter = NORMAL) const;
