@@ -3,6 +3,7 @@
         * Version 1.2.0 released
         =========================
 
+        Fix GSkyMap::publish() bug for empty sky maps (#1835)
         Fix loss of application name and version (#1835)
         Add methods for logging in applications (#1828)
         Fix removal of Python wrappers after make clean (#1826)
